compiler/tests/fail/common/typealias_arrayelement_integer.jazz

type x = int;


fn test() {
    reg x[t] y;
}